syntax = "proto3";

package bottle.fulfillment.v1;

import "bottle/fulfillment/v1/order.proto";

message OrderCreated {
  bottle.fulfillment.v1.Order order = 1;
}

message OrderUpdated {
  bottle.fulfillment.v1.Order old = 1;
  bottle.fulfillment.v1.Order new = 2;
}

message VerificationRequested {
  bottle.fulfillment.v1.Order order = 1;
  repeated string flags = 2;
}

message TribbleFailed {
  bottle.fulfillment.v1.Order order = 1;

  enum FailureType {
    FAILURE_TYPE_UNSPECIFIED = 0;
    FAILURE_TYPE_INVALID_ADDRESS = 1;
    FAILURE_TYPE_ALREADY_SHIPPED = 2;
    FAILURE_TYPE_TRIBBLE_ERROR = 3;
  }

  FailureType type = 2;
}
